2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-ios-overlay): Define.
	(poke-ios-update-overlay): Likewise.
	(poke-ios-mode-map): Register keys for poke-ios-cmd-next and
	poke-ios-cmd-prev.
	(poke-ios-cmd-next): Define.
	(poke-ios-cmd-prev): Likewise.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (openset): Define.
	* doc/poke.texi (openset): New section.
	* testsuite/poke.pkl/open-set-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Remove checks for json-c and
	machine-interface stuff.
	* DEPENDENCIES: Remove dependency on json-c.
	* poke/pk-mi.h: Likewise.
	* poke/pk-mi.c (pk_mi): Likewise.
	* poke/pk-mi*.[ch]: Remove.
	* poke/poke.c (print_help): Remove --help output for the machine
	interface.
	(parse_args_1): Do not handle --mi.
	(main): Do not enter the MI.

	* poke/Makefile.am: Remove MI-related stuff.
	* testsuite/Makefile.am: Likewise.
	* testsuite/poke.mi-json: Remove directory and tests.
	* doc/poke.texi (The Machine-Interface): Remove node.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (_decl): Do not allow re-defining immutable
	declarations.
	* libpoke/pkl-rt.pk: Mark declarations as immutable.
	* libpoke/pkl-tab.y: Allow IMMUTABLE declarations at the
	top-level.
	* libpoke/pkl-ast.c (pkl_ast_make_decl): Initialize immutable_p to
	0.
	(pkl_ast_print_1): Print immutable_p.
	* libpoke/pkl-ast.h (PKL_AST_DECL_IMMUTABLE_P): Define.
	(struct pkl_ast_decl): New field `immutable_p'.
	* libpoke/pkl-tab.y: New token IMMUTABLE.
	* libpoke/pkl-lex.l: Handle __IMMUTABLE__.
	* testsuite/poke.pkl/immutable-func-1.pk: Likewise.
	* testsuite/poke.pkl/immutable-diag-2.pk: Likewise.
	* testsuite/poke.pkl/immutable-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-exit): Handle *poke-ios*.
	(poke): Create *poke-ios*.